--- a/Task 7 - EDA.ipynb
+++ b/Task 7 - EDA.ipynb
@@ -214,7 +214,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# cargo weight vs flight speed"
+   ]
   },
   {
    "cell_type": "code",
