Added Tasks 3 and 4.

--- a/EDA Task 3.ipynb
+++ b/EDA Task 3.ipynb
@@ -2,7 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#import packages here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Task 3: Does the weather affect the delay?**\n",
+    "\n",
+    "Use the API to pull the weather information for flights. There is no need to get weather for ALL flights. We can choose the right representative sample. Let's focus on four weather types:\n",
+    "\n",
+    "* sunny\n",
+    "* cloudy\n",
+    "* rainy\n",
+    "* snow. \n",
+    "\n",
+    "Test the hypothesis that these 4 delays are from the same distribution. If they are not, which ones are significantly different?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +35,13 @@
     "#inclement weather\n",
     "#cargo weight, fuel burn"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
