--- a/EDA Task 4.ipynb
+++ b/EDA Task 4.ipynb
@@ -1626,6 +1626,17 @@
     "plt.xlabel('Hour(24hr)')\n",
     "plt.ylabel('Taxi Time (Min)')\n",
     "\n",
+    "plt.xticks(taxi_out_hour_mean.index);\n",
+    "plt.title('Taxi Time by Hour')\n",
+    "plt.xlabel('Hour(24hr)')\n",
+    "plt.ylabel('Taxi Time (Min)')\n",
+    "​\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "#comparing to the graph above, there seems to be a positive correlation between taxi time and flight volume\n",
+    "\n",
+    "​\n",
+    "\n",
     "plt.legend()\n",
     "plt.show()\n",
     "#comparing to the graph above, there seems to be a positive correlation between taxi time and flight volume"
