Update Task 3 - EDA.ipynb

--- a/Task 3 - EDA.ipynb
+++ b/Task 3 - EDA.ipynb
@@ -50,7 +50,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_key='80c6c754465a0a3a359356dbb9be865c'"
+    "api_key=''"
    ]
   },
   {
