--- a/Midterm - Feature Engineering and Modelling.ipynb
+++ b/Midterm - Feature Engineering and Modelling.ipynb
@@ -1942,18 +1942,6 @@
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Regression\n",
-    "The target variable is **ARR_DELAY**. We need to be careful which columns to use and which don't. For example, DEP_DELAY is going to be the perfect predictor, but we can't use it because in real-life scenario, we want to predict the delay before the flight takes of --> We can use average delay from earlier days but not the one from the actual flight we predict.\n",
-    "\n",
-    "For example, variables **CARRIER_DELAY, WEATHER_DELAY, NAS_DELAY, SECURITY_DELAY, LATE_AIRCRAFT_DELAY** shouldn't be used directly as predictors as well. However, we can create various transformations from earlier values.\n",
-    "\n",
-    "We will be evaluating your models by predicting the ARR_DELAY for all flights 1 week in advance."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -2299,6 +2287,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Regression\n",
+    "The target variable is **ARR_DELAY**. We need to be careful which columns to use and which don't. For example, DEP_DELAY is going to be the perfect predictor, but we can't use it because in real-life scenario, we want to predict the delay before the flight takes of --> We can use average delay from earlier days but not the one from the actual flight we predict.\n",
+    "\n",
+    "For example, variables **CARRIER_DELAY, WEATHER_DELAY, NAS_DELAY, SECURITY_DELAY, LATE_AIRCRAFT_DELAY** shouldn't be used directly as predictors as well. However, we can create various transformations from earlier values.\n",
+    "\n",
+    "We will be evaluating your models by predicting the ARR_DELAY for all flights 1 week in advance."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 289,
    "metadata": {},
@@ -2314,7 +2314,7 @@
    "outputs": [],
    "source": [
     "def prevalence (y_actual):\n",
-    "    return (sum(y_actual)/len(y_actual))\n"
+    "    return (sum(y_actual)/len(y_actual))"
    ]
   },
   {
