--- a/Midterm - Feature Engineering and Modelling.ipynb
+++ b/Midterm - Feature Engineering and Modelling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 547,
+   "execution_count": 586,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "import matplotlib.pyplot as plt\n",
     "from collections import OrderedDict\n",
     "from sklearn import metrics, linear_model\n",
-    "from sklearn.metrics import accuracy_score, confusion_matrix, mean_squared_error, classification_report\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, mean_squared_error, classification_report, average_precision_score\n",
     "from sklearn.linear_model import LinearRegression, LogisticRegression, SGDClassifier\n",
     "from sklearn.preprocessing import PolynomialFeatures, StandardScaler\n",
     "from sklearn.preprocessing import LabelEncoder, OneHotEncoder\n",
@@ -628,6 +628,15 @@
     "* unsupervised learning as feature engineering?\n",
     "\n",
     "what are the additional options?: Think about what we could do more to improve the model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sns.heatmap(flights_df, xticklabels=flights_df.columns, yticklabels=flights_df.columns, annot=True)"
    ]
   },
   {
@@ -2303,7 +2312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 562,
+   "execution_count": 591,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2316,7 +2325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 563,
+   "execution_count": 592,
    "metadata": {},
    "outputs": [
     {
@@ -2334,7 +2343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 564,
+   "execution_count": 593,
    "metadata": {},
    "outputs": [
     {
@@ -2367,7 +2376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 565,
+   "execution_count": 587,
    "metadata": {},
    "outputs": [
     {
@@ -2376,7 +2385,7 @@
        "GaussianNB(priors=None, var_smoothing=1e-09)"
       ]
      },
-     "execution_count": 565,
+     "execution_count": 587,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2388,7 +2397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 566,
+   "execution_count": 588,
    "metadata": {},
    "outputs": [
     {
@@ -2406,23 +2415,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 567,
+   "execution_count": 589,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.29873112e-04 2.77238535e-04 2.95185652e-04 2.66525862e-04\n",
-      " 3.01994208e-04 5.48935911e-03 2.20783630e-02 0.00000000e+00\n",
-      " 4.98505345e-04 1.33199743e-03 4.60153718e-04 0.00000000e+00\n",
-      " 1.30155612e-04 1.25360436e-02 1.92508983e-04 1.52999422e-02\n",
-      " 0.00000000e+00 5.61729291e-03 3.49600674e-01 1.97107485e-03\n",
-      " 6.63120892e-03 4.05239944e-04 1.36691096e-04 3.92595477e-04\n",
-      " 1.33323606e-04 4.28421727e-04 4.64125110e-05 2.28697419e-04\n",
-      " 7.20880882e-05 2.42225773e-05 1.32855445e-04 2.35318854e-04\n",
-      " 6.26545136e-05 1.12270242e-04 2.07064584e-03 2.21877600e-03\n",
-      " 1.63846947e-04 5.69927842e-01]\n"
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.62      1.00      0.76      1812\n",
+      "           1       0.00      0.00      0.00      1127\n",
+      "\n",
+      "    accuracy                           0.62      2939\n",
+      "   macro avg       0.31      0.50      0.38      2939\n",
+      "weighted avg       0.38      0.62      0.47      2939\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jewelle/anaconda3/lib/python3.7/site-packages/sklearn/metrics/_classification.py:1272: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test, y_pred))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 594,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2.19170312e-04 2.47052923e-04 1.88540104e-04 2.31256006e-04\n",
+      " 2.62359770e-04 5.99995361e-03 2.52898977e-02 0.00000000e+00\n",
+      " 4.31203370e-04 1.22801687e-03 2.46737085e-04 0.00000000e+00\n",
+      " 1.27395272e-04 1.23320637e-02 1.92508983e-04 1.57867904e-02\n",
+      " 0.00000000e+00 5.61729291e-03 3.43928886e-01 3.98767557e-03\n",
+      " 6.84219118e-03 3.42331179e-04 8.63640838e-05 2.96564748e-04\n",
+      " 1.29480157e-04 2.74447000e-04 4.64125110e-05 1.61980699e-04\n",
+      " 7.24472049e-05 1.44009907e-04 1.22225263e-04 2.13473346e-04\n",
+      " 5.74121166e-05 2.58190144e-04 2.70123849e-03 9.19903288e-04\n",
+      " 2.89029208e-04 5.70725498e-01]\n"
      ]
     }
    ],
@@ -2435,13 +2477,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 568,
+   "execution_count": 595,
    "metadata": {},
    "outputs": [],
    "source": [
     "regressor = RandomForestRegressor(n_estimators=20, random_state=0)\n",
     "regressor.fit(X_train, y_train)\n",
     "y_pred = regressor.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 597,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(classification_report(y_test, y_pred))"
    ]
   },
   {
@@ -2620,7 +2671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 583,
    "metadata": {},
    "outputs": [
     {
@@ -2662,7 +2713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 584,
    "metadata": {},
    "outputs": [
     {
@@ -2671,7 +2722,7 @@
        "(9.705709555245365e-15, 0.9733285267845752)"
       ]
      },
-     "execution_count": 545,
+     "execution_count": 584,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2684,7 +2735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 585,
    "metadata": {},
    "outputs": [
     {
