--- a/Midterm - Feature Engineering and Modelling.ipynb
+++ b/Midterm - Feature Engineering and Modelling.ipynb
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2195,7 +2195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 557,
+   "execution_count": 609,
    "metadata": {},
    "outputs": [
     {
@@ -2204,7 +2204,7 @@
        "StandardScaler(copy=True, with_mean=True, with_std=True)"
       ]
      },
-     "execution_count": 557,
+     "execution_count": 609,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2551,7 +2551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 610,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2561,7 +2561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 611,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2571,13 +2571,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 574,
+   "execution_count": 612,
    "metadata": {},
    "outputs": [],
    "source": [
     "xg_reg.fit(X_train,y_train)\n",
     "\n",
-    "preds = xg_reg.predict(X_test)"
+    "preds = xg_reg.predict(X)"
    ]
   },
   {
@@ -2691,6 +2691,27 @@
     "xgb.plot_importance(xg_reg)\n",
     "plt.rcParams['figure.figsize'] = [30, 10]\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 613,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-613-3cc0ca7e6e46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'preds'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpreds\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "flightsdf['preds'] = preds"
    ]
   },
   {
